--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="../assets/image/charmeleon.png">
+    <!-- <link rel="shortcut icon" href="../assets/image/charmeleon.png"> -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
